name:                todo
version:             0.0.1
synopsis:            My awesome todo-list app
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Aditya Bhargava
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable todo
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.5.*
                     , wai ==1.3.*
                     , warp ==1.3.*
                     , http-types ==0.7.*
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , persistent-postgresql
                     , heroku
                     , transformers ==0.3.0.0
                     , wai-middleware-static ==0.3.2
                     , wai-extra
                     , time
                     , monad-logger ==0.2.4
